Fixed teeny tiny spacing issues in the category bar
So inline-blocks are affected by white space. As a result, this liquid monstrosity was born. I hope I never need to modify this.

--- a/_assets/stylesheets/_partials/site-header.scss
+++ b/_assets/stylesheets/_partials/site-header.scss
@@ -134,7 +134,7 @@ nav#category-navigation {
 
   li {
     display: inline-block;
-    width: 24.5%;
+    width: 25%;
 
     min-height: 44px;
     line-height: 44px; // Hack to align text vertically. Here's hoping the text doesn't span more than 2 lines!
